test/errors/e12.gm
Procedure Foo()
{
    Int x;
    Double y;
    Bool z;
    Graph G;
    Float f;

    G = x;
    z = x;
    y = z;
    x = y;
    f = y;
}
